--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
     <meta name="description" content="Página de Login do Sistema ERP de Recursos Humanos da Universidade Unipaulistana">
     <meta name="keywords" content="ERP,Unipaulistana,RH">
-    <meta name="author" content="Alexandre Henrique de Souza Leodoro de Oliveira">
+    <meta name="author" content="Alexandre Hq">
     <link rel="shortcut icon" href="./img/recursos-humanos.png" type="image/x-icon">
     <link rel="stylesheet" href="css/style.css">
     <link rel="preconnect" href="https://fonts.googleapis.com">
